build/log/idf_py_stdout_output_16392
[1/11] Performing build step for 'bootloader'
[1/1] cmd.exe /C "cd /D D:\Sotatek\sample_project\build\bootloader\esp-idf\esptool_py && D:\Sotatek\espDev\Espressif\python_env\idf5.0_py3.11_env\Scripts\python.exe D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/partition_table/check_sizes.py --offset 0x8000 bootloader 0x1000 D:/Sotatek/sample_project/build/bootloader/bootloader.bin"
Bootloader binary size 0x6710 bytes. 0x8f0 bytes (8%) free.
[2/9] Building C object esp-idf/uart/CMakeFiles/__idf_uart.dir/source/uart.c.obj
FAILED: esp-idf/uart/CMakeFiles/__idf_uart.dir/source/uart.c.obj 
ccache D:\Sotatek\espDev\Espressif\tools\xtensa-esp32-elf\esp-2022r1-11.2.0\xtensa-esp32-elf\bin\xtensa-esp32-elf-gcc.exe -DSOC_MMU_PAGE_SIZE=CONFIG_MMU_PAGE_SIZE -ID:/Sotatek/sample_project/build/config -ID:/Sotatek/sample_project/library/uart/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/newlib/platform_include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include/freertos -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/FreeRTOS-Kernel/portable/xtensa/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/freertos/esp_additions/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/include/soc/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/. -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_hw_support/port/esp32/private_include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/heap/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/log/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/soc/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32/. -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/soc/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/hal/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/hal/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/hal/platform_port/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/include/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_rom/esp32 -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_common/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/soc -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_system/port/include/private -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/xtensa/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/include/apps/sntp -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/lwip/src/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/lwip/port/esp32/include/arch -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/driver/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/driver/deprecated -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/driver/esp32/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_pm/include -ID:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2/components/esp_ringbuf/include -mlongcalls -Wno-frame-address  -fdiagnostics-color=always -ffunction-sections -fdata-sections -Wall -Werror=all -Wno-error=unused-function -Wno-error=unused-variable -Wno-error=deprecated-declarations -Wextra -Wno-unused-parameter -Wno-sign-compare -Wno-enum-conversion -gdwarf-4 -ggdb -Og -fmacro-prefix-map=D:/Sotatek/sample_project=. -fmacro-prefix-map=D:/Sotatek/espDev/Espressif/frameworks/esp-idf-v5.0.2=/IDF -fstrict-volatile-bitfields -Wno-error=unused-but-set-variable -fno-jump-tables -fno-tree-switch-conversion -DconfigENABLE_FREERTOS_DEBUG_OCDAWARE=1 -std=gnu17 -Wno-old-style-declaration -D_GNU_SOURCE -DIDF_VER=\"HEAD-HASH-NOTFOUND\" -DESP_PLATFORM -D_POSIX_READER_WRITER_LOCKS -MD -MT esp-idf/uart/CMakeFiles/__idf_uart.dir/source/uart.c.obj -MF esp-idf\uart\CMakeFiles\__idf_uart.dir\source\uart.c.obj.d -o esp-idf/uart/CMakeFiles/__idf_uart.dir/source/uart.c.obj -c D:/Sotatek/sample_project/library/uart/source/uart.c
In file included from D:/Sotatek/sample_project/library/uart/source/uart.c:14:
D:/Sotatek/sample_project/library/uart/source/uart.c: In function 'uart_vCreate':
D:/Sotatek/sample_project/library/uart/include/uart.h:9:17: error: 'GPIO_NUM_17' undeclared (first use in this function)
    9 | #define UART_TX GPIO_NUM_17
      |                 ^~~~~~~~~~~
D:/Sotatek/sample_project/library/uart/source/uart.c:38:30: note: in expansion of macro 'UART_TX'
   38 |     uart_set_pin(UART_NUM_2, UART_TX, UART_RX, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
      |                              ^~~~~~~
D:/Sotatek/sample_project/library/uart/include/uart.h:9:17: note: each undeclared identifier is reported only once for each function it appears in
    9 | #define UART_TX GPIO_NUM_17
      |                 ^~~~~~~~~~~
D:/Sotatek/sample_project/library/uart/source/uart.c:38:30: note: in expansion of macro 'UART_TX'
   38 |     uart_set_pin(UART_NUM_2, UART_TX, UART_RX, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
      |                              ^~~~~~~
D:/Sotatek/sample_project/library/uart/include/uart.h:10:17: error: 'GPIO_NUM_16' undeclared (first use in this function)
   10 | #define UART_RX GPIO_NUM_16
      |                 ^~~~~~~~~~~
D:/Sotatek/sample_project/library/uart/source/uart.c:38:39: note: in expansion of macro 'UART_RX'
   38 |     uart_set_pin(UART_NUM_2, UART_TX, UART_RX, UART_PIN_NO_CHANGE, UART_PIN_NO_CHANGE);
      |                                       ^~~~~~~
ninja: build stopped: subcommand failed.
